--- a/fitz-dk/themes/vanilje/hugo.toml
+++ b/fitz-dk/themes/vanilje/hugo.toml
@@ -1,22 +1,42 @@
-baseURL = 'https://example.org/'
+theme = 'vanilje'
+baseURL = 'https://fitz.dk'
 languageCode = 'en-US'
-title = 'My New Hugo Site'
+title = 'Mainframes... and more'
+enableEmoji = true
+
+
+[params]
+  dateFormat = "02 Jan 2006"
+  [params.author]
+    email = 'blog@fitzsimons.dk'
+    name = 'Jack Fitzsimons'
+    copyright = '© 2025 Jack Fitzsimons'
+
 
 [menus]
   [[menus.main]]
     name = 'Home'
     pageRef = '/'
     weight = 10
-
   [[menus.main]]
     name = 'Posts'
     pageRef = '/posts'
     weight = 20
-
   [[menus.main]]
-    name = 'Tags'
-    pageRef = '/tags'
+    name = 'Talks'
+    pageRef = '/talks'
     weight = 30
+
+[outputs]
+  home = ['html']
+  posts = ['html', 'rss']
+  section = ['html']
+  taxonomy = ['html']
+  term = ['html']
+
+[services]
+  [services.rss]
+    limit = 30
 
 [module]
   [module.hugoVersion]
