updated toml again

--- a/fitz-dk/hugo.toml
+++ b/fitz-dk/hugo.toml
@@ -1,7 +1,7 @@
 theme = 'vanilje'
 baseURL = 'https://fitz.dk'
 languageCode = 'en-US'
-title = 'Mainframes... and more'
+title = "Mainframes... and more"
 enableEmoji = true
 
 
