--- a/fitz-dk/themes/vanilje/hugo.toml
+++ b/fitz-dk/themes/vanilje/hugo.toml
@@ -1,5 +1,5 @@
 theme = 'vanilje'
-baseURL = 'fitz.dk'
+baseURL = 'https://fitz.dk'
 languageCode = 'en-US'
 title = "Mainframes... and less"
 enableEmoji = true
