--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 theme = 'vanilje'
-baseURL = 'https://fitz.dk'
+baseURL = "https://fitz.dk"
 languageCode = 'en-US'
 title = "Mainframes... and more"
 enableEmoji = true
