--- a/hugo.toml
+++ b/hugo.toml
@@ -1,7 +1,7 @@
 theme = 'vanilje'
-baseURL = "https://fitz.dk"
+baseURL = 'https://fitz.dk'
 languageCode = 'en-US'
-title = "Mainframes... and more"
+title = 'Mainframes & More'
 enableEmoji = true
 
 
