updated index + most recent blog post

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,6 +1,6 @@
 baseURL = 'https://fitz.dk'
 languageCode = 'en-US'
-title = 'Mainframes & More'
+title = 'Occasional Thoughts'
 enableEmoji = true
 
 
